--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,18 +1,17 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.9.7",
-    "com.unity.collab-proxy": "2.3.1",
+    "com.unity.2d.animation": "10.1.1",
+    "com.unity.2d.aseprite": "1.1.3",
+    "com.unity.2d.pixel-perfect": "5.0.3",
+    "com.unity.2d.psdimporter": "9.0.3",
+    "com.unity.2d.spriteshape": "10.0.4",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "4.0.2",
     "com.unity.feature.2d": "2.0.0",
-    "com.unity.ide.rider": "3.0.28",
+    "com.unity.feature.cinematic": "1.0.0",
+    "com.unity.feature.gameplay-storytelling": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
-    "com.unity.localization": "1.4.5",
-    "com.unity.render-pipelines.universal": "16.0.5",
-    "com.unity.test-framework": "1.3.9",
-    "com.unity.timeline": "1.8.6",
-    "com.unity.toolchain.linux-x86_64": "2.0.6",
-    "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
